--- a/style.css
+++ b/style.css
@@ -30,16 +30,27 @@ body {
   
 }
 
-  @media screen and (max-width: 700px) {
+  @media screen and (max-width: 600px) {
    
     .cordImage {
-      margin-top: 5%;
-      width: 200px;
-  
+      margin-top: 40%;
+      width: 100px;
+ 
     }
     #ConteinerCard {
       flex-direction: column;
       align-items: center;
     }
-    
+    .text{
+      width: 100vw;
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+    }
+    .datosPokemon{
+      margin-left: 40%;
+      margin-bottom: 0;
+      width: 100px;
+    }
   }
+  
